syntax = "proto3";
package LPS.Core.Rpc.InnerMessages;

enum CreateType {
  Local = 0;
  Anywhere = 1;
  Manual = 2;
};

enum EntityType
{
  ServerClientEntity = 0;
  GateEntity = 1;
}

message CreateEntity {
  string EntityClassName = 1;
  CreateType CreateType = 2;
  string Description = 3;
  EntityType EntityType = 4;
  uint32 ConnectionID = 5;
};
