syntax = "proto3";
import "mailbox.proto";
package LPS.Server.Rpc.InnerMessages;
 
message ExchangeMailBox {
  LPS.Common.Rpc.InnerMessages.MailBox Mailbox = 1;
}
